2008-06-12  Ivan Frade  <ivan.frade@nokia.com>

	* Makefile.decl: Make rules to build unit tests. Copied from glib.
	* configure.ac: Added rules to build unit tests when the glib
	installed version supports it.
	
2008-06-12  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c (db_get_static_data)
	(db_row_to_service): Plug a few leaks
	* src/libtracker-common/tracker-ontology.c (tracker_ontology_init):
	Set the GDestroyNotify handler for mime/metadata keys, as these
	hashtables have to take ownership of the strings passed.

2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (tracker_crawler_start): Changed
	jthe default location to $HOME from some testing directory of mine.

2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-main.c: Removed commented out code.
	
	* src/trackerd/tracker-crawler.c: Renamed internal functions
	better and fixed a nasty crasher because we weren't NULL
	terminating the GStrv we send to the indexer to process.
	
	* src/trackerd/tracker-main.c: Don't initiate and shutdown the
	process-files module, it is no longer used. Also make sure we
	shutdown properly when using Ctrl+C. Now when we initiate the db
	manager we set the attach_all to TRUE now that Carlos has fixed
	that bug. This means we use one connection for all transactions in
	the daemon now.
	
2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Make sure we set the ignored
	file types each time the TrackerConfig object is set for the
	TrackerCrawler. This fixes the warning about TrackConfig not
	existing for tracker_config_get_no_index_file_types().
	
	* src/trackerd/tracker-main.c: Removed the initial sleep from the
	daemon, this is only meant for the indexer which implements the
	feature and this also means that we don't respond to dbus events
	in that interval.

2008-06-11  Martyn Russell  <martyn@imendio.com>
